2011-10-17  Kent Tamura  <tkent@chromium.org>

        A follow-up of r97716.
        https://bugs.webkit.org/show_bug.cgi?id=68803

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::reset): Initialize m_dumpCreateView.

2011-10-17  Jochen Eisinger  <jochen@chromium.org>

        [chromium] add LayoutTestController.dumpCreateView() to monitor calls to WebViewClient::createView
        https://bugs.webkit.org/show_bug.cgi?id=68803

        Reviewed by Nate Chapin.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::dumpCreateView):
        * DumpRenderTree/chromium/LayoutTestController.h:
        (LayoutTestController::shouldDumpCreateView):
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::createView):

2011-10-17  Nate Chapin  <japhet@chromium.org>

        Add myself to watchlists, and add a watch
        for Source/WebCore/loader/.
        https://bugs.webkit.org/show_bug.cgi?id=70263

        Reviewed by David Levin.

        * Scripts/webkitpy/common/config/watchlist:

2011-10-17  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] DRT: Make non-recognized keys work in events as well.
        https://bugs.webkit.org/show_bug.cgi?id=69860

        Reviewed by Antonio Gomes.

        fast/forms/select-type-ahead-non-latin.html is the canonical case we fix
        here: it has a select box with a few non-latin options, and one of them
        is selected via the keyboard.

        In this specific case, we need to make EventHandler::keyEvent send a
        keyPressEvent to SelectElement, so that
        SelectElement::defaultEventHandler calls typeAheadFind(). This happens
        only when PlatformKeyEvent::text() is not empty, which was not the case
        so far.

        * DumpRenderTree/efl/EventSender.cpp:
        (keyDownCallback):

2011-10-17  Alok Priyadarshi  <alokp@chromium.org>
